# ChangeLog for media-plugins/gst-plugins-esd
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-plugins/gst-plugins-esd/ChangeLog,v 1.165 2011/03/11 18:34:32 xarthisius Exp $

  11 Mar 2011; Kacper Kowalik <xarthisius@gentoo.org>
  gst-plugins-esd-0.10.23.ebuild:
  ppc/ppc64 stable wrt #346981

  18 Jan 2011; Jeroen Roovers <jer@gentoo.org> gst-plugins-esd-0.10.23.ebuild:
  Stable for HPPA (bug #346981).

  06 Jan 2011; Raúl Porcel <armin76@gentoo.org>
  gst-plugins-esd-0.10.23.ebuild:
  alpha/ia64/sh/sparc stable wrt #346981

  25 Dec 2010; Markus Meier <maekke@gentoo.org> gst-plugins-esd-0.10.23.ebuild:
  arm stable, bug #346981

  20 Dec 2010; Markos Chandras <hwoarang@gentoo.org>
  gst-plugins-esd-0.10.23.ebuild:
  Stable on amd64 wrt bug #346981

  20 Dec 2010; Thomas Kahle <tomka@gentoo.org> gst-plugins-esd-0.10.23.ebuild:
  x86 stable per bug 346981

  11 Sep 2010; <nixnut@gentoo.org> gst-plugins-esd-0.10.22.ebuild:
  ppc stable #329703

  05 Sep 2010; Tobias Klausmann <klausman@gentoo.org>
  gst-plugins-esd-0.10.22.ebuild:
  Stable on alpha, bug #329703

  05 Sep 2010; Raúl Porcel <armin76@gentoo.org>
  gst-plugins-esd-0.10.22.ebuild:
  ia64/sh/sparc stable wrt #329703

  04 Sep 2010; Raúl Porcel <armin76@gentoo.org>
  gst-plugins-esd-0.10.21.ebuild:
  alpha/ia64/sh/sparc stable wrt #324691

  10 Aug 2010; Jeroen Roovers <jer@gentoo.org>
  gst-plugins-esd-0.10.22.ebuild:
  Stable for HPPA (bug #329703).

  05 Aug 2010; Samuli Suominen <ssuominen@gentoo.org>
  gst-plugins-esd-0.10.22.ebuild:
  ppc64 stable wrt #324691

  03 Aug 2010; Markus Meier <maekke@gentoo.org>
  gst-plugins-esd-0.10.22.ebuild:
  arm stable, bug #329703

  01 Aug 2010; Tobias Klausmann <klausman@gentoo.org>
  gst-plugins-esd-0.10.21.ebuild:
  Stable on alpha, bug #324691

*gst-plugins-esd-0.10.23 (31 Jul 2010)

  31 Jul 2010; Mart Raudsepp <leio@gentoo.org>
  +gst-plugins-esd-0.10.23.ebuild: