@@ -1,6 +1,14 @@
 # ChangeLog for media-plugins/gst-plugins-esd
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-plugins/gst-plugins-esd/ChangeLog,v 1.165 2011/03/11 18:34:32 xarthisius Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-plugins/gst-plugins-esd/ChangeLog,v 1.166 2011/03/20 08:43:28 leio Exp $
+
+*gst-plugins-esd-0.10.28 (20 Mar 2011)
+
+  20 Mar 2011; Mart Raudsepp <leio@gentoo.org>
+  -gst-plugins-esd-0.10.16.ebuild, -gst-plugins-esd-0.10.17.ebuild,
+  -gst-plugins-esd-0.10.21.ebuild, -gst-plugins-esd-0.10.22.ebuild,
+  +gst-plugins-esd-0.10.28.ebuild:
+  Version bump. Code cleanups
 
   11 Mar 2011; Kacper Kowalik <xarthisius@gentoo.org>
   gst-plugins-esd-0.10.23.ebuild:
